--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "effector": "^23.2.2",
     "effector-react": "^23.2.1",
     "react": "^18.3.1",
+    "react-base-table": "^1.13.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
   },
