--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "axios": "^1.7.2",
@@ -21,7 +22,10 @@
     "react": "^18.3.1",
     "react-base-table": "^1.13.5",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.52.0",
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
