--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/x-charts": "^7.14.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "effector": "^23.2.2",
